changes in login

--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -7,43 +7,28 @@
                     <td id="detail-name" class="pt-3">Name of the course</td>
                     <td id="detail-gama" class="pt-3">:</td>
                     <td class="form-group pt-3">
-                        <select class="form-control" style="max-width: 400px;">
-                            <option>Choose...</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>5</option>
-                            <option>6</option>
-                        </select>
+                        <input type="text" style="max-width: 400px;" class="form-control"
+                            placeholder="Name of the course">
                     </td>
                 </tr>
                 <tr>
-                    <td id="detail-name" class="pt-3">Name of the Branch</td>
+                    <td id=" detail-name" class="pt-3">Name of the Branch
+                    </td>
                     <td id="detail-gama" class="pt-3">:</td>
                     <td class="pt-3">
-                        <select class="form-control" style="max-width: 400px;">
-                            <option>Choose...</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>5</option>
-                            <option>6</option>
-                        </select>
+                        <input type="text" style="max-width: 400px;" class="form-control"
+                            placeholder="Name of the Branch">
                     </td>
                 </tr>
                 <tr>
                     <td id="detail-name" class="pt-3">Name of the Students with initial at end</td>
                     <td id="detail-gama" class="pt-3">:</td>
                     <td class="pt-3">
-                        <select class="form-control" style="max-width: 400px;">
-                            <option>Choose...</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>5</option>
-                            <option>6</option>
-                        </select>
+                        <input type="text" style="max-width: 400px;" class="form-control" placeholder="Enter the name">
                     </td>
                 </tr>
                 <tr>
-                    <td id="detail-name" class="pt-3">Name of the course</td>
+                    <td id="detail-name" class="pt-3">Communal Category in which the candidate was admitted</td>
                     <td id="detail-gama" class="pt-3">:</td>
                     <td class="pt-3">
                         <select class="form-control" style="max-width: 400px;">
@@ -56,7 +41,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td id="detail-name" class="pt-3">Name of the course</td>
+                    <td id="detail-name" class="pt-3">Community of the Student Admitted</td>
                     <td id="detail-gama" class="pt-3">:</td>
                     <td class="pt-3">
                         <select class="form-control" style="max-width: 400px;">
@@ -66,6 +51,63 @@
                             <option>5</option>
                             <option>6</option>
                         </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td id="detail-name" class="pt-3">Entry Mode Whether</td>
+                    <td id="detail-gama" class="pt-3">:</td>
+                    <td class="pt-3">
+                        <select class="form-control" style="max-width: 400px;">
+                            <option>Choose...</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>5</option>
+                            <option>6</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td id="detail-name" class="pt-3">Score Obtained</td>
+                    <td id="detail-gama" class="pt-3">:</td>
+                    <td class="pt-3">
+                        <select class="form-control" style="max-width: 400px;">
+                            <option>Choose...</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>5</option>
+                            <option>6</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td id=" detail-name" class="pt-3">Details of History of Arrears, if any
+                    </td>
+                    <td id="detail-gama" class="pt-3">:</td>
+                    <td class="pt-3">
+                        <input type="text" style="max-width: 400px;" class="form-control">
+                    </td>
+                </tr>
+                <tr>
+                    <td id=" detail-name" class="pt-3">Details of Lack of Attendace Percentge, Break of Study if any
+                    </td>
+                    <td id="detail-gama" class="pt-3">:</td>
+                    <td class="pt-3">
+                        <input type="text" style="max-width: 400px;" class="form-control">
+                    </td>
+                </tr>
+                <tr>
+                    <td id="detail-name" class="pt-3">Account No</td>
+                    <td id="detail-gama" class="pt-3">:</td>
+                    <td class="form-group pt-3">
+                        <input type="text" style="max-width: 400px;" class="form-control">
+                    </td>
+                </tr>
+                <tr>
+                    <td id="detail-name" class="pt-3">Name of the course</td>
+                    <td id="detail-gama" class="pt-3">:</td>
+                    <td class="form-group pt-3">
+                        <input type="text" style="max-width: 400px;" class="form-control"
+                            placeholder="Name of the course">
                     </td>
                 </tr>
             </tbody>
