--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,8 @@
         </p>
 
         <p style="color: blue;">
-            KINDLY ENSURE THAT THE TRANSFER AND READMISSION APPLICATIONS ARE FILLED WITH CORRECT DETAILS
+            KINDLY ENSURE THAT THE PG ASSISTANTSHIP AND NON-GATE PG SCHOLARS APPLICATIONS ARE FILLED WITH CORRECT
+            DETAILS
         </p>
     </div>
 
