--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -33,10 +33,15 @@
                     <td class="pt-3">
                         <select class="form-control" style="max-width: 400px;">
                             <option>Choose...</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>5</option>
-                            <option>6</option>
+                            <option>OC</option>
+                            <option>BC</option>
+                            <option>BCM</option>
+                            <option>MBC</option>
+                            <option>DNC</option>
+                            <option>SC</option>
+                            <option>SCA</option>
+                            <option>SCC</option>
+                            <option>ST</option>
                         </select>
                     </td>
                 </tr>
@@ -46,10 +51,15 @@
                     <td class="pt-3">
                         <select class="form-control" style="max-width: 400px;">
                             <option>Choose...</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>5</option>
-                            <option>6</option>
+                            <option>OC</option>
+                            <option>BC</option>
+                            <option>BCM</option>
+                            <option>MBC</option>
+                            <option>DNC</option>
+                            <option>SC</option>
+                            <option>SCA</option>
+                            <option>SCC</option>
+                            <option>ST</option>
                         </select>
                     </td>
                 </tr>
@@ -59,9 +69,9 @@
                     <td class="pt-3">
                         <select class="form-control" style="max-width: 400px;">
                             <option>Choose...</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>5</option>
+                            <option>TANCET</option>
+                            <option>GATE</option>
+                            <option>NONGATE</option>
                             <option>6</option>
                         </select>
                     </td>
@@ -70,13 +80,14 @@
                     <td id="detail-name" class="pt-3">Score Obtained</td>
                     <td id="detail-gama" class="pt-3">:</td>
                     <td class="pt-3">
-                        <select class="form-control" style="max-width: 400px;">
-                            <option>Choose...</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>5</option>
-                            <option>6</option>
-                        </select>
+                        <div class="form-group" style="max-width: 200px;">
+                            <label for="inputCity">TANCET</label>
+                            <input type="text" class="form-control" id="inputCity">
+                        </div>
+                        <div class="form-group mt-3" style="max-width: 200px;">
+                            <label for="inputCity">GATE</label>
+                            <input type="text" class="form-control" id="inputCity">
+                        </div>
                     </td>
                 </tr>
                 <tr>
@@ -103,11 +114,17 @@
                     </td>
                 </tr>
                 <tr>
-                    <td id="detail-name" class="pt-3">Name of the course</td>
+                    <td id="detail-name" class="pt-3">Bank Name</td>
                     <td id="detail-gama" class="pt-3">:</td>
                     <td class="form-group pt-3">
-                        <input type="text" style="max-width: 400px;" class="form-control"
-                            placeholder="Name of the course">
+                        <input type="text" style="max-width: 400px;" class="form-control">
+                    </td>
+                </tr>
+                <tr>
+                    <td id="detail-name" class="pt-3">IFSC code</td>
+                    <td id="detail-gama" class="pt-3">:</td>
+                    <td class="form-group pt-3">
+                        <input type="text" style="max-width: 400px;" class="form-control">
                     </td>
                 </tr>
             </tbody>
