--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -82,11 +82,11 @@
                     <td class="pt-3">
                         <div class="form-group" style="max-width: 200px;">
                             <label for="inputCity">TANCET</label>
-                            <input type="text" class="form-control" id="inputCity">
+                            <input type="number" class="form-control" id="inputCity">
                         </div>
                         <div class="form-group mt-3" style="max-width: 200px;">
                             <label for="inputCity">GATE</label>
-                            <input type="text" class="form-control" id="inputCity">
+                            <input type="number" class="form-control" id="inputCity">
                         </div>
                     </td>
                 </tr>
