--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
       For any queries - contact us
     </p>
     <p style="font-size: 1.3rem;color: beige">
-      E-mail : onlinetrans2020@gmail.com
+      E-mail : gcesalem.edu@gmail.com
     </p>
     <div class="mobile-rows">
       <div class="mobile-rows-01">
@@ -36,7 +36,7 @@
       <div class="mobile-rows-01">
         <i class="fa fa-mobile" style="font-size: 40px; color: beige;"></i>
       </div>
-      <div class="mobile-rows-02" style="color: beige">- 1234567890</div>
+      <div class="mobile-rows-02" style="color: beige;">- 1234567890</div>
     </div>
   </div>
 </footer>
