--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -1,7 +1,51 @@
 <div class="details-container pt-3">
+    <div class="cont-navbar" style="margin-top: -16px;">
+        <table>
+            <tr class="active">
+                <td class="table1">Instruction in Tamil
+                </td>
+            </tr>
+            <tr>
+                <td class="table1">Instruction in English
+                </td>
+            </tr>
+            <tr>
+                <td class="table1">Information Brochure
+                </td>
+            </tr>
+            <tr>
+                <td class="table1">TPAFC
+                </td>
+            </tr>
+            <tr>
+                <td class="table1">Required Documents
+                </td>
+            </tr>
+            <tr>
+                <td class="table1">Government Polytechnic College list
+                </td>
+            </tr>
+            <tr>
+                <td class="table1">Sponsor Form
+                </td>
+            </tr>
+            <tr>
+                <td class="table1">TNPA Data Sheet in English
+                </td>
+            </tr>
+            <tr>
+                <td class="table1">TNPA Data Sheet in Tamil
+                </td>
+            </tr>
+            <tr>
+                <td class="table1">Press
+                </td>
+            </tr>
+        </table>
+    </div>
+
     <div class="cont-rows">
         <table class="table table-borderless" style="text-align: center;">
-
             <tbody>
                 <tr>
                     <td id="detail-name" class="pt-3">Name of the course</td>
@@ -16,8 +60,15 @@
                     </td>
                     <td id="detail-gama" class="pt-3">:</td>
                     <td class="pt-3">
-                        <input type="text" style="max-width: 400px;" class="form-control"
-                            placeholder="Name of the Branch">
+                        <select class="form-control" style="max-width: 400px;">
+                            <option>Choose...</option>
+                            <option>M.E STRUCTURAL</option>
+                            <option>M.E CAD</option>
+                            <option>ME THERMAL</option>
+                            <option>M.E PED</option>
+                            <option>M.E WELDING TECHNOLOGY</option>
+                            <option>M.E COMMUNICATION SYSTEMS</option>
+                        </select>
                     </td>
                 </tr>
                 <tr>
