--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -45,140 +45,150 @@
     </div>
 
     <div class="cont-rows">
-        <table class="table table-borderless" style="text-align: center;">
-            <tbody>
-                <tr>
-                    <td id="detail-name" class="pt-3">Name of the course</td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="form-group pt-3">
-                        <input type="text" style="max-width: 400px;" class="form-control"
-                            placeholder="Name of the course">
-                    </td>
-                </tr>
-                <tr>
-                    <td id=" detail-name" class="pt-3">Name of the Branch
-                    </td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="pt-3">
-                        <select class="form-control" style="max-width: 400px;">
-                            <option>Choose...</option>
-                            <option>M.E STRUCTURAL</option>
-                            <option>M.E CAD</option>
-                            <option>ME THERMAL</option>
-                            <option>M.E PED</option>
-                            <option>M.E WELDING TECHNOLOGY</option>
-                            <option>M.E COMMUNICATION SYSTEMS</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td id="detail-name" class="pt-3">Name of the Students with initial at end</td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="pt-3">
-                        <input type="text" style="max-width: 400px;" class="form-control" placeholder="Enter the name">
-                    </td>
-                </tr>
-                <tr>
-                    <td id="detail-name" class="pt-3">Communal Category in which the candidate was admitted</td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="pt-3">
-                        <select class="form-control" style="max-width: 400px;">
-                            <option>Choose...</option>
-                            <option>OC</option>
-                            <option>BC</option>
-                            <option>BCM</option>
-                            <option>MBC</option>
-                            <option>DNC</option>
-                            <option>SC</option>
-                            <option>SCA</option>
-                            <option>SCC</option>
-                            <option>ST</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td id="detail-name" class="pt-3">Community of the Student Admitted</td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="pt-3">
-                        <select class="form-control" style="max-width: 400px;">
-                            <option>Choose...</option>
-                            <option>OC</option>
-                            <option>BC</option>
-                            <option>BCM</option>
-                            <option>MBC</option>
-                            <option>DNC</option>
-                            <option>SC</option>
-                            <option>SCA</option>
-                            <option>SCC</option>
-                            <option>ST</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td id="detail-name" class="pt-3">Entry Mode Whether</td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="pt-3">
-                        <select class="form-control" style="max-width: 400px;">
-                            <option>Choose...</option>
-                            <option>TANCET</option>
-                            <option>GATE</option>
-                            <option>NONGATE</option>
-                            <option>6</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td id="detail-name" class="pt-3">Score Obtained</td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="pt-3">
-                        <div class="form-group" style="max-width: 200px;">
-                            <label for="inputCity">TANCET</label>
-                            <input type="number" class="form-control" id="inputCity">
-                        </div>
-                        <div class="form-group mt-3" style="max-width: 200px;">
-                            <label for="inputCity">GATE</label>
-                            <input type="number" class="form-control" id="inputCity">
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td id=" detail-name" class="pt-3">Details of History of Arrears, if any
-                    </td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="pt-3">
-                        <input type="text" style="max-width: 400px;" class="form-control">
-                    </td>
-                </tr>
-                <tr>
-                    <td id=" detail-name" class="pt-3">Details of Lack of Attendace Percentge, Break of Study if any
-                    </td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="pt-3">
-                        <input type="text" style="max-width: 400px;" class="form-control">
-                    </td>
-                </tr>
-                <tr>
-                    <td id="detail-name" class="pt-3">Account No</td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="form-group pt-3">
-                        <input type="text" style="max-width: 400px;" class="form-control">
-                    </td>
-                </tr>
-                <tr>
-                    <td id="detail-name" class="pt-3">Bank Name</td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="form-group pt-3">
-                        <input type="text" style="max-width: 400px;" class="form-control">
-                    </td>
-                </tr>
-                <tr>
-                    <td id="detail-name" class="pt-3">IFSC code</td>
-                    <td id="detail-gama" class="pt-3">:</td>
-                    <td class="form-group pt-3">
-                        <input type="text" style="max-width: 400px;" class="form-control">
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <form>
+            <table class="table table-borderless" style="text-align: center;">
+                <tbody>
+                    <tr>
+                        <td id="detail-name" class="pt-3">Name of the course</td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="form-group pt-3">
+                            <input type="text" style="max-width: 400px;" class="form-control"
+                                placeholder="Name of the course">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id=" detail-name" class="pt-3">Name of the Branch
+                        </td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="pt-3">
+                            <select class="form-control" style="max-width: 400px;">
+                                <option>Choose...</option>
+                                <option>M.E STRUCTURAL</option>
+                                <option>M.E CAD</option>
+                                <option>ME THERMAL</option>
+                                <option>M.E PED</option>
+                                <option>M.E WELDING TECHNOLOGY</option>
+                                <option>M.E COMMUNICATION SYSTEMS</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="detail-name" class="pt-3">Name of the Students with initial at end</td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="pt-3">
+                            <input type="text" style="max-width: 400px;" class="form-control"
+                                placeholder="Enter the name">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="detail-name" class="pt-3">Communal Category in which the candidate was admitted</td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="pt-3">
+                            <select class="form-control" style="max-width: 400px;">
+                                <option>Choose...</option>
+                                <option>OC</option>
+                                <option>BC</option>
+                                <option>BCM</option>
+                                <option>MBC</option>
+                                <option>DNC</option>
+                                <option>SC</option>
+                                <option>SCA</option>
+                                <option>SCC</option>
+                                <option>ST</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="detail-name" class="pt-3">Community of the Student Admitted</td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="pt-3">
+                            <select class="form-control" style="max-width: 400px;">
+                                <option>Choose...</option>
+                                <option>OC</option>
+                                <option>BC</option>
+                                <option>BCM</option>
+                                <option>MBC</option>
+                                <option>DNC</option>
+                                <option>SC</option>
+                                <option>SCA</option>
+                                <option>SCC</option>
+                                <option>ST</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="detail-name" class="pt-3">Entry Mode Whether</td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="pt-3">
+                            <select class="form-control" style="max-width: 400px;">
+                                <option>Choose...</option>
+                                <option>TANCET</option>
+                                <option>GATE</option>
+                                <option>NONGATE</option>
+                                <option>6</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="detail-name" class="pt-3">Score Obtained</td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="pt-3">
+                            <div class="form-group" style="max-width: 200px;">
+                                <label for="inputCity">TANCET</label>
+                                <input type="number" class="form-control" id="inputCity">
+                            </div>
+                            <div class="form-group mt-3" style="max-width: 200px;">
+                                <label for="inputCity">GATE</label>
+                                <input type="number" class="form-control" id="inputCity">
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id=" detail-name" class="pt-3">Details of History of Arrears, if any
+                        </td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="pt-3">
+                            <input type="text" style="max-width: 400px;" class="form-control">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id=" detail-name" class="pt-3">Details of Lack of Attendace Percentge, Break of Study if any
+                        </td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="pt-3">
+                            <input type="text" style="max-width: 400px;" class="form-control">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="detail-name" class="pt-3">Account No</td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="form-group pt-3">
+                            <input type="text" style="max-width: 400px;" class="form-control">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="detail-name" class="pt-3">Bank Name</td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="form-group pt-3">
+                            <input type="text" style="max-width: 400px;" class="form-control">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="detail-name" class="pt-3">IFSC code</td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="form-group pt-3">
+                            <input type="text" style="max-width: 400px;" class="form-control">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="detail-name" class="pt-2"></td>
+                        <td id="detail-gama" class="pt-3">
+                            <button class="btn btn-outline-primary mt-4" style=" border-radius: 14px;">Submit</button>
+                        </td>
+
+                    </tr>
+                </tbody>
+            </table>
+        </form>
     </div>
 </div>
