--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -18,3 +18,16 @@
 .form-control{
     max-width: 250px;
 }
+#login-input{
+    margin-left: 50px;
+}
+
+@media(max-width: 568px)
+{
+    .form-control{
+        max-width: 300px;
+    }
+    #login-input{
+        margin-left: 15px;
+    }
+}
