--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -49,6 +49,18 @@
             <table class="table table-borderless" style="text-align: center;">
                 <tbody>
                     <tr>
+                        <td id=" detail-name" class="pt-3"> Year of Student
+                        </td>
+                        <td id="detail-gama" class="pt-3">:</td>
+                        <td class="pt-3">
+                            <select class="form-control" style="max-width: 400px;">
+                                <option>Choose...</option>
+                                <option>I Year</option>
+                                <option>II Year</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
                         <td id="detail-name" class="pt-3">Name of the course</td>
                         <td id="detail-gama" class="pt-3">:</td>
                         <td class="form-group pt-3">
