--- a/src/app/details-form/details-form.component.css
+++ b/src/app/details-form/details-form.component.css
@@ -5,7 +5,7 @@
 }
 .cont-rows{
     width: 1000px;
-    height: 1000px;
+    height: 1050px;
     margin-right: 50px;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
@@ -16,7 +16,7 @@
 }
 .cont-navbar{
     width: 250px;
-    height: 1020px;
+    height: 1070px;
     background: #1b2e51;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
 }
@@ -31,4 +31,21 @@
     color: black;
     border: 10px;
     font-weight: 500;
+  }
+
+  @media(max-width: 900px)
+  {
+    .cont-navbar{
+        display: none;
+    }
+    .cont-rows{
+        height: 1480px;
+        margin-right: 0px;
+    }
+    #detail-name{
+        width: 100px;
+    }
+    .btn{
+        margin-left: 30px;
+    }
   }
