--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 
 <app-login></app-login>
 <!-- <app-details-form></app-details-form> -->
+<!-- <app-college-name></app-college-name> -->
 
 <br>
 <!--Footer-->
