--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -1,44 +1,44 @@
 <div class="details-container pt-3">
-    <div class="cont-navbar" style="margin-top: -16px;">
+    <div class="cont-navbar">
         <table>
             <tr class="active">
-                <td class="table1">Instruction in Tamil
+                <td class="table1">Notification 1
                 </td>
             </tr>
             <tr>
-                <td class="table1">Instruction in English
+                <td class="table1">Notification 2
                 </td>
             </tr>
             <tr>
-                <td class="table1">Information Brochure
+                <td class="table1">Notification 3
                 </td>
             </tr>
             <tr>
-                <td class="table1">TPAFC
+                <td class="table1">Notification 4
                 </td>
             </tr>
             <tr>
-                <td class="table1">Required Documents
+                <td class="table1">Notification 5
                 </td>
             </tr>
             <tr>
-                <td class="table1">Government Polytechnic College list
+                <td class="table1">Notification 6
                 </td>
             </tr>
             <tr>
-                <td class="table1">Sponsor Form
+                <td class="table1">Notification 7
                 </td>
             </tr>
             <tr>
-                <td class="table1">TNPA Data Sheet in English
+                <td class="table1">Notification 8
                 </td>
             </tr>
             <tr>
-                <td class="table1">TNPA Data Sheet in Tamil
+                <td class="table1">Notification 9
                 </td>
             </tr>
             <tr>
-                <td class="table1">Press
+                <td class="table1">Notification 10
                 </td>
             </tr>
         </table>
@@ -195,7 +195,8 @@
                     <tr>
                         <td id="detail-name" class="pt-2"></td>
                         <td id="detail-gama" class="pt-3">
-                            <button class="btn btn-outline-primary mt-4" style=" border-radius: 14px;">Submit</button>
+                            <button class="btn btn-outline-primary mt-4" style=" border-radius: 14px;"
+                                (click)="submit()">Submit</button>
                         </td>
 
                     </tr>
