--- a/src/app/details-form/details-form.component.css
+++ b/src/app/details-form/details-form.component.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
 }
 .cont-rows{
-    width: 1000px;
+    width: 1200px;
     height: 1050px;
     margin-right: 50px;
     border-radius: 10px;
@@ -17,23 +17,30 @@
 .cont-navbar{
     width: 250px;
     height: 1070px;
-    background: #1b2e51;
+    margin-top: -15px;
+    background: #37DCF2;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
 }
 .table1{
     height: 65px;
     font-family: sans-serif;
-    font-weight: 500;
+    font-size: 20px;
     color: white;
   }
   table tr td.table1:hover {
     background:  #eee4d1;
+    width: 250px;
     color: black;
     border: 10px;
-    font-weight: 500;
+    font-weight: 600;
+  }
+  button:hover{
+    background: linear-gradient(to bottom,#599de0,#37DCF2);
+    color: aliceblue;
+    font-size: 16px;
   }
 
-  @media(max-width: 900px)
+  @media(max-width: 600px)
   {
     .cont-navbar{
         display: none;
