--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -21,7 +21,11 @@
 #login-input{
     margin-left: 50px;
 }
-
+button:hover{
+    background: linear-gradient(to bottom,#599de0,#37DCF2);
+    color: aliceblue;
+    font-size: 16px;
+}
 @media(max-width: 568px)
 {
     .form-control{
