--- a/src/app/college-name/college-name.component.css
+++ b/src/app/college-name/college-name.component.css
@@ -1,3 +1,40 @@
+.details-container{
+    display: flex;
+    justify-content:space-between;
+    flex-wrap: wrap;
+}
+.cont-rows{
+    width: 1200px;
+    height: 650px;
+    margin-right: 150px;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
+}
+.cont-navbar{
+    width: 250px;
+    height: 670px;
+    margin-top: -15px;
+    background: #37DCF2;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
+}
+.table1{
+    height: 65px;
+    font-family: sans-serif;
+    font-size: 22px;
+    color: white;
+  }
+  table tr td.table1:hover {
+    background:  #eee4d1;
+    width: 250px;
+    color: black;
+    border: 10px;
+    font-weight: 600;
+  }
+  button:hover{
+    background: linear-gradient(to bottom,#599de0,#37DCF2);
+    color: aliceblue;
+    font-size: 16px;
+  }
 .college-name{
     font-size: 2.5rem;
 }
@@ -17,4 +54,19 @@ button:hover{
     background: linear-gradient(to bottom,#599de0,#37DCF2);
     color: aliceblue;
     font-size: 16px;
+  }
+
+  @media(max-width: 600px)
+  {
+    .cont-navbar{
+        display: none;
+    }
+    .cont-rows{
+        height: 800px;
+        width: 380px;
+        margin-right: 0px;
+    }
+    .college-name{
+        font-size: 1.8rem;
+    }
   }
