--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,10 +32,10 @@
 
             <div class="input-group mb-4 mt-4" id="login-input">
                 <input type="text" formControlName="email" class="form-control" placeholder="College code">
-                <div style="color: red;" *ngIf="email.invalid && (email.touched || email.dirty)">
+                <!-- <div style="color: red;" *ngIf="email.invalid && (email.touched || email.dirty)">
                     <span class="error" *ngIf="email.errors?.required">*Email is Required.</span>
                     <span class="error" *ngIf="email.errors?.email">*Enter valid e-mail id.</span>
-                </div>
+                </div> -->
             </div>
 
             <div class="input-group mb-3 mt-4" id="login-input">
